--- a/spec_14.adoc
+++ b/spec_14.adoc
@@ -102,8 +102,10 @@ FIXME: Fill in
 To implement basic resource manager functionality, the following use
 cases SHALL be supported by the jobspec:
 
+=== Section 1: Resource only requests
+
 '''
-Use Case 1:: Request Single Resource with Count
+Use Case 1.1:: Request Single Resource with Count
 +
 Specific Example:: Request 4 nodes
 +
@@ -111,63 +113,11 @@ Existing Equivalent:: `salloc -N4` or `qsub -l nodes=4`
 +
 [source,yaml]
 resources:
-    type: node
-    count: 4
+    - type: node
+      count: 4
 
 '''
-Use Case 2:: Run N tasks across M nodes
-+
-Specific Example:: Run `hostname` 20 times on 4 nodes, 5 per node
-+
-Existing Equivalent::
-`srun -N4 -n20 hostname` or `srun -N4 --ntasks-per-node=5 hostname`
-or `qsub -l nodes=4,mppnppn=5`
-+
-[source,yaml]
-resources:
-    type: node
-    count: 4
-    tasks:
-        command: hostname
-        count: 5
-
-'''
-Use Case 3:: Run N tasks across M nodes, unequal distribution
-+
-Specific Example:: Run 5 copies of `hostname` across 4 nodes,
-default distribution
-+
-Existing Equivalent:: `srun -n5 -N4 hostname`
-+
-[source,yaml]
-tasks:
-    command: hostname
-    count: 5
-with:
-    type: node
-    count: 4
-
-
-'''
-Use Case 4:: Run N tasks, Require M cores per task
-+
-Specific Example:: Run 10 copies of `myapp`, require 2 cores per copy,
-for a total of 20 cores
-+
-Existing Equivalent:: `srun -n10 -c 2 myapp`
-+
-[source,yaml]
-type: group
-tasks:
-    command: myapp
-with:
-    type: core
-    count: 2
-count: 10
-
-
-'''
-Use Case 5:: Request a range of a type of resource
+Use Case 1.2:: Request a range of a type of resource
 +
 Specific Example:: Request between 3 and 30 nodes
 +
@@ -175,11 +125,11 @@ Existing Equivalent:: `salloc -N3-30`
 +
 [source,yaml]
 resources:
-    type: node
-    count: [3:30]
+    - type: node
+      count: "[3:30]"
 
 '''
-Use Case 6:: Request M nodes with a minimum number of sockets per node
+Use Case 1.3:: Request M nodes with a minimum number of sockets per node
 and cores per socket
 +
 Specific Example:: Request 4 nodes with at least 2 sockets each,
@@ -192,17 +142,138 @@ Existing Equivalent::
 +
 [source,yaml]
 resources:
-    type: node
-    count: 4
-    with:
-        type: socket
-        count: 2
-        with:
-            type: core
-            count: 4
+    - type: node
+      count: 4
+      with:
+        - type: socket
+          count: 2
+          with:
+            - type: core
+              count: 4
 
 '''
-Use Case 7:: Run different binaries with differing resource
+Use Case 1.4:: Complex example from OAR
++
+Specific Example::
+[quote, http://oar.imag.fr/docs/2.5/user/usecases.html#mixing-every-together]
+ask for 1 core on 2 nodes on the same cluster with 4096 GB of memory
+and Infiniband 10G + 1 cpu on 2 nodes on the same switch with bicore
+processors for a walltime of 4 hours
+
+Existing Equivalent::
++
+ oarsub -I -l "{memnode=4096 and ib10g='YES'}/cluster=1/nodes=2/core=1+{nbcore=2}/switch=1/nodes=2/cpu=1,walltime=4:0:0"
++
+[source,yaml]
+resources:
+    - type: cluster
+      count: 1
+      with:
+        - type: node
+          count: 2
+          with:
+            - type: memory
+              amount: 4GB
+            - type: ib10g
+        - type: switch
+          with:
+            type: node
+            count: 2
+            with:
+                - type: core
+walltime: 4h
+
+'''
+Use Case 1.5:: Request resources across multiple clusters
++
+Specific Example::
+Ask for 1 core on 15 nodes across 2 clusters (total = 30 cores)
++
+Existing Equivalent:: `oarsub -I -l /cluster=2/nodes=15/core=1`
++
+[source,yaml]
+resources:
+    - type: cluster
+      count: 2
+      with:
+          - type: Node
+            count: 15
+            with:
+              - type: core
+
+'''
+Use Case 1.6:: Request N cores across M switches
++
+Specific Example::
+Request 3 cores across 3 switches
++
+Existing Equivalent:: `oarsub -I -l /switch=3/core=1`
++
+[source,yaml]
+resources:
+    - type: switch
+      count: 3
+      with:
+        - type: core
+
+
+=== Section 2: Resource and task jobspec
+
+'''
+Use Case 2.1:: Run N tasks across M nodes
++
+Specific Example:: Run `hostname` 20 times on 4 nodes, 5 per node
++
+Existing Equivalent::
+`srun -N4 -n20 hostname` or `srun -N4 --ntasks-per-node=5 hostname`
+or 
++
+`qsub -l nodes=4,mppnppn=5`
++
+[source,yaml]
+resources:
+    - type: node
+      count: 4
+      with:
+        - type: task
+          command: hostname
+          count: 5
+
+'''
+Use Case 2.2:: Run N tasks across M nodes, unequal distribution
++
+Specific Example:: Run 5 copies of `hostname` across 4 nodes,
+default distribution
++
+Existing Equivalent:: `srun -n5 -N4 hostname`
++
+[source,yaml]
+tasks:
+    - command: hostname
+      count: 5
+with:
+    - type: node
+      count: 4
+
+'''
+Use Case 2.3:: Run N tasks, Require M cores per task
++
+Specific Example:: Run 10 copies of `myapp`, require 2 cores per copy,
+for a total of 20 cores
++
+Existing Equivalent:: `srun -n10 -c 2 myapp`
++
+[source,yaml]
+tasks:
+    - command: myapp
+      count: 10
+      with:
+          - type: core
+            count: 2
+
+
+'''
+Use Case 2.4:: Run different binaries with differing resource
 requirements as single program
 +
 Specific Example:: 11 tasks, one node, first 10 using one core and 4G of RAM for
@@ -218,132 +289,69 @@ resources:
         count: 10
         command: read-db
         with:
-          - core
-          - type: Memory
+          - type: core
+          - type: memory
             amount: 4GB
       - type: task
         command: db
         with:
-          - type: Core
+          - type: core
             count: 6
-          - type: Memory
+          - type: memory
             amount: 24GB
 
 '''
-Use Case 8:: Complex example from OAR
-+
-Specific Example::
-[quote, http://oar.imag.fr/docs/2.5/user/usecases.html#mixing-every-together]
-ask for 1 core on 2 nodes on the same cluster with 4096 GB of memory
-and Infiniband 10G + 1 cpu on 2 nodes on the same switch with bicore
-processors for a walltime of 4 hours
-
-Existing Equivalent::
-+
- oarsub -I -l "{memnode=4096 and ib10g='YES'}/cluster=1/nodes=2/core=1+{nbcore=2}/switch=1/nodes=2/cpu=1,walltime=4:0:0"
-+
-[source,yaml]
-resources:
-    - type: Cluster
-      with:
-        - type: Node
-          count: 2
-          with:
-            - type: Memory
-              amount: 4096GB
-            - type: InfiniBand10G
-        - type: Switch
-          with:
-            type: Node
-            count: 2
-            with:
-                type: Core
-walltime: 4h
-
-'''
-Use Case 9:: Run command requesting minimum amount of RAM per core
+Use Case 2.5:: Run command requesting minimum amount of RAM per core
 +
 Specific Example::
 Run 10 copies of `app` across 10 cores with at least 2GB per core
 +
-Existing Equivalent:: `srun -n 10 --mem-per-cpu=2048 app` or
-
+Existing Equivalent:: `srun -n 10 --mem-per-cpu=2048 app`
 +
 [source,yaml]
+----
 tasks:
-  command: app
+  - command: app
 resources:
-  group:
-      count: 10
-      with:
-          - type: Memory
-          amount: 2GB
-          - type: core
-+
+  - type: group
+    count: 10
+    with:
+    - type: Memory
+      amount: 2GB
+    - type: core
+----
 or
 +
 [source,yaml]
 resources:
-    task:
-        count: 10
-        command: app
-        with:
-            - type: Memory
-            amount: 2GB
-            - type: core
+  - type: task
+    count: 10
+    command: app
+    with:
+      - type: Memory
+        amount: 2GB
+      - type: core
 
 '''
-Use Case 10:: Run N copies of a command with minimum amount of RAM per node
+Use Case 2.6:: Run N copies of a command with minimum amount of RAM per node
 +
 Specific Example::
 Run 10 copies of `app` across 2 nodes with at least 4GB per node
 +
 Existing Equivalent:: `srun -n10 -N2 --mem=4096 app` or
-`oarsub -p memnode=4096 -l nodes=2 "taktuk -c oarsh -f $OAR_FILE_NODES broadcast exec [app]`
++
+`oarsub -p memnode=4096 -l nodes=2 "taktuk -c oarsh -f $OAR_FILE_NODES broadcast exec [app]"`
 +
 [source,yaml]
 tasks:
-    command: app
-    count: 10
+    - command: app
+      count: 10
 resources:
     - type: node
-    count: 2
-    with:
-        type: memory
-        amount: 4G
-
-'''
-Use Case 11:: Request resources across multiple clusters
-+
-Specific Example::
-Ask for 1 core on 15 nodes across 2 clusters (total = 30 cores)
-+
-Existing Equivalent:: `oarsub -I -l /cluster=2/nodes=15/core=1`
-+
-[source,yaml]
-resources:
-    - type: Cluster
       count: 2
       with:
-          - type: Node
-          count: 15
-          with:
-              - type: core
-
-'''
-Use Case 12: Request N cores across M switches
-+
-Specific Example::
-Request 3 cores across 3 switches
-+
-Existing Equivalent:: `oarsub -I -l /switch=3/core=1`
-+
-[source,yaml]
-resources:
-    - type: Switch
-    count: 3
-    with:
-        - type: Core
+        - type: memory
+          amount: 4G
 
 == References
 
