--- a/spec_14.adoc
+++ b/spec_14.adoc
@@ -426,7 +426,14 @@ Use Case 1.1:: Request Single Resource with Count
 +
 Specific Example:: Request 4 nodes
 +
-Existing Equivalent:: `salloc -N4` or `qsub -l nodes=4`
+Existing Equivalents:: 
++
+|===
+| Slurm | `salloc -N4`     
+| PBS | `qsub -l nodes=4`
+|===
++
+Jobspec YAML::
 +
 [source,yaml]
 version: 1
@@ -440,7 +447,13 @@ Use Case 1.2:: Request a range of a type of resource
 +
 Specific Example:: Request between 3 and 30 nodes
 +
-Existing Equivalent:: `salloc -N3-30`
+Existing Equivalents::
++
+|===
+| Slurm | `salloc -N3-30`
+|===
++
+Jobspec YAML::
 +
 [source,yaml]
 version: 1
@@ -456,10 +469,15 @@ and cores per socket
 Specific Example:: Request 4 nodes with at least 2 sockets each,
 and 4 cores per socket
 +
-Existing Equivalent::
-`srun -N4 --sockets-per-node=2 --cores-per-socket=4` or
-`srun -N4 -B '2:4:*'` or
-`oarsub -l nodes=4/sockets=2/cores=4`
+Existing Equivalents::
++
+|===
+| Slurm (a)| `srun -N4 --sockets-per-node=2 --cores-per-socket=4`
+| Slurm (b)| `srun -N4 -B '2:4:*'`
+| OAR      | `oarsub -l nodes=4/sockets=2/cores=4`
+|=== 
++
+Jobspec YAML::
 +
 [source,yaml]
 version: 1
@@ -480,6 +498,8 @@ sockets.
 +
 Specific Example:: Request an *exclusive* allocation of 4 nodes that have at
 least two sockets and 4 cores per socket:
++
+Jobspec YAML::
 +
 [source,yaml]
 version: 1
@@ -505,9 +525,12 @@ ask for 1 core on 2 nodes on the same cluster with 4096 GB of memory
 and Infiniband 10G + 1 cpu on 2 nodes on the same switch with bicore
 processors for a walltime of 4 hours
 
-Existing Equivalent::
+Existing Equivalents::
+|===
+| OAR | `oarsub -I -l "{memnode=4096 and ib10g='YES'}/cluster=1/nodes=2/core=1+{nbcore=2}/switch=1/nodes=2/cpu=1,walltime=4:0:0"`
+|===
 +
- oarsub -I -l "{memnode=4096 and ib10g='YES'}/cluster=1/nodes=2/core=1+{nbcore=2}/switch=1/nodes=2/cpu=1,walltime=4:0:0"
+Jobspec YAML::
 +
 [source,yaml]
 version: 1
@@ -535,7 +558,13 @@ Use Case 1.6:: Request resources across multiple clusters
 Specific Example::
 Ask for 1 core on 15 nodes across 2 clusters (total = 30 cores)
 +
-Existing Equivalent:: `oarsub -I -l /cluster=2/nodes=15/core=1`
+Existing Equivalents::
++
+|===
+| OAR |  `oarsub -I -l /cluster=2/nodes=15/core=1`
+|===
++
+Jobspec YAML::
 +
 [source,yaml]
 version: 1
@@ -555,7 +584,13 @@ Use Case 1.7:: Request N cores across M switches
 Specific Example::
 Request 3 cores across 3 switches
 +
-Existing Equivalent:: `oarsub -I -l /switch=3/core=1`
+Existing Equivalents::
++
+|===
+| OAR | `oarsub -I -l /switch=3/core=1`
+|===
++
+Jobspec YAML::
 +
 [source,yaml]
 version: 1
@@ -574,11 +609,14 @@ Use Case 2.1:: Run N tasks across M nodes
 +
 Specific Example:: Run `hostname` 20 times on 4 nodes, 5 per node
 +
-Existing Equivalent::
-`srun -N4 -n20 hostname` or `srun -N4 --ntasks-per-node=5 hostname`
-or
+Existing Equivalents::
 +
-`qsub -l nodes=4,mppnppn=5`
+|===
+| Slurm | `srun -N4 -n20 hostname` or `srun -N4 --ntasks-per-node=5 hostname`
+| PBS   | `qsub -l nodes=4,mppnppn=5`
+|===
++
+Jobspec YAML::
 +
 [source,yaml]
 version: 1
@@ -602,7 +640,13 @@ Use Case 2.2:: Run N tasks across M nodes, unequal distribution
 Specific Example:: Run 5 copies of `hostname` across 4 nodes,
 default distribution
 +
-Existing Equivalent:: `srun -n5 -N4 hostname`
+Existing Equivalents::
++
+|===
+| Slurm | `srun -n5 -N4 hostname`
+|===
++
+Jobspec YAML::
 +
 [source,yaml]
 ----
@@ -618,6 +662,7 @@ tasks:
     count:
       total: 5
 ----
++
 or, with explicit task slots:
 +
 [source,yaml]
@@ -645,7 +690,13 @@ Use Case 2.3:: Run N tasks, Require M cores per task
 Specific Example:: Run 10 copies of `myapp`, require 2 cores per copy,
 for a total of 20 cores
 +
-Existing Equivalent:: `srun -n10 -c 2 myapp`
+Existing Equivalents::
++
+|===
+| Slurm | `srun -n10 -c 2 myapp`
+|===
++
+Jobspec YAML::
 +
 [source,yaml]
 resources:
@@ -668,7 +719,9 @@ requirements as single program
 Specific Example:: 11 tasks, one node, first 10 using one core and 4G of RAM for
 `read-db`, last using 6 cores and 24G of RAM for `db`
 +
-Existing Equivalent:: None Known
+Existing Equivalents:: None Known
++
+Jobspec YAML::
 +
 [source,yaml]
 version: 1
@@ -707,7 +760,13 @@ Use Case 2.5:: Run command requesting minimum amount of RAM per core
 Specific Example::
 Run 10 copies of `app` across 10 cores with at least 2GB per core
 +
-Existing Equivalent:: `srun -n 10 --mem-per-cpu=2048 app`
+Existing Equivalents::
++
+|===
+| Slurm | `srun -n 10 --mem-per-cpu=2048 app`
+|===
++
+Jobspec YAML::
 +
 [source,yaml]
 ----
@@ -733,9 +792,14 @@ Use Case 2.6:: Run N copies of a command with minimum amount of RAM per node
 Specific Example::
 Run 10 copies of `app` across 2 nodes with at least 4GB per node
 +
-Existing Equivalent:: `srun -n10 -N2 --mem=4096 app` or
+Existing Equivalents::
 +
-`oarsub -p memnode=4096 -l nodes=2 "taktuk -c oarsh -f $OAR_FILE_NODES broadcast exec [app]"`
+|===
+| Slurm | `srun -n10 -N2 --mem=4096 app`
+| OAR   | `oarsub -p memnode=4096 -l nodes=2 "taktuk -c oarsh -f $OAR_FILE_NODES broadcast exec [app]"`
+|===
++
+Jobspec YAML::
 +
 [source,yaml]
 version: 1
